// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestRewards should render miniquest rewards 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "Quest rewards",
  "options": Object {
    "image": "[[File:The Curse of Arrav rewards scroll.png]]",
    "name": "The Curse of Arrav",
    "rewards": "Total XP awarded: 120,000",
  },
  "params": Array [],
}
`;

exports[`QuestRewards should render quest rewards 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "Quest rewards",
  "options": Object {
    "image": "[[File:The Curse of Arrav rewards scroll.png]]",
    "name": "The Curse of Arrav",
    "qp": 2,
    "rewards": "Total XP awarded: 120,000",
  },
  "params": Array [],
}
`;

exports[`QuestRewards should render quest rewards without XP 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "Quest rewards",
  "options": Object {
    "image": "[[File:The Curse of Arrav rewards scroll.png]]",
    "name": "The Curse of Arrav",
    "qp": 2,
  },
  "params": Array [],
}
`;
